<resources>
    <string name="app_name">Temperature Service</string>
    <string name="notification_content">Running in foreground</string>
    <!-- Settings Activity Title -->
    <string name="title_activity_settings">Settings</string>

    <string name="button_settings">Settings</string>
    <string name="button_licenses">Licenses</string>

    <!-- Preference Titles -->
    <string name="limit_header">Limit Settings</string>
    <string name="calculation_header">Calculation Settings</string>
    <string name="sys_header">Sysfs Path Settings</string>

    <!-- Messages Preferences -->
    <string name="warn_limit_title">Limit Temperature for Warning Notification</string>
    <string name="subtrahend_title">Subtrahend</string>
    <string name="factor_title">Factor</string>

    <!-- Sysfs Path Preferences -->
    <string name="enable_pwm_title">Enable</string>
    <string name="export_title">Export</string>
    <string name="set_period_title">Period</string>
    <string name="set_duty_cycle_title">Duty Cycle</string>
    <string name="frequency_title">Frequency</string>
</resources>